# claude-mesh

./: Cargo.toml  DESIGN.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: broker.rs  client.rs  cmesh.rs  config.rs  daemon.rs  hook.rs  init.rs  main.rs  mcp.rs  protocol.rs  transcript.rs  util.rs
