[package]
name = "claude-mesh"
version = "0.1.0"
edition = "2021"
description = "Ask across your Claude Code windows — local and remote — with zero extra inference cost."
license = "MIT"

[[bin]]
name = "claude-mesh"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "5"

[profile.release]
strip = true
opt-level = "z"
lto = true
